--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-livedata:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
+    implementation 'com.github.santalu:diagonal-imageview:1.0.5'
+
 }
